k8s/k8s app/web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: lumina
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: lumina
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30101
